--- a/docs/papers/calco11/duran.bib
+++ b/docs/papers/calco11/duran.bib
@@ -1,10 +1,3 @@
-%% This BibTeX bibliography file was created using BibDesk.
-%% http://bibdesk.sourceforge.net/
-
-
-%% Created for Paco Durán at 2011-03-22 13:11:19 +0100 
-
-
 %% Saved with string encoding Unicode (UTF-8) 
 
 
@@ -156,8 +149,7 @@
 	Date-Added = {2011-02-26 12:38:32 +0100},
 	Date-Modified = {2011-02-26 12:39:33 +0100},
 	Title = {User Interfaces for Theorem Provers},
-	Url = {http://www.informatik.uni-bremen.de/uitp/},
-	Bdsk-Url-1 = {http://www.informatik.uni-bremen.de/uitp/}}
+	Url = {http://www.informatik.uni-bremen.de/uitp/}}
 
 @inproceedings{Aspinall-Luth-Winterstein:2007,
 	Author = {David Aspinall and Christoph L\"uth and Daniel Winterstein},
@@ -184,8 +176,6 @@
 
 @article{Duran-Meseguer:2011,
 	Author = {Francisco Dur\'{a}n and Jos\'{e} Meseguer},
-	Date-Added = {2011-02-26 11:07:52 +0100},
-	Date-Modified = {2011-03-22 12:32:38 +0100},
 	Journal = {Journal of Logic and Algebraic Programming Journal of Logic and Algebraic Programming},
 	Note = {Accepted for publication},
 	Title = {On the {C}hurch-{R}osser and Coherence Properties of Conditional Order-Sorted Rewrite Theories},
@@ -223,7 +213,7 @@
 	Pages = {519-522},
 	Publisher = {Springer},
 	Series = {Lecture Notes in Computer Science},
-	Title = {The Heterogeneous Tool Set, Hets},
+	Title = {The Heterogeneous Tool Set, {H}ets},
 	Volume = {4424},
 	Year = {2007}}
 
@@ -995,19 +985,20 @@ We show that in a free F-algebra endowed with a strict order we can associate wi
 	Date-Added = {2010-02-03 10:24:13 +0100},
 	Date-Modified = {2010-02-03 10:26:53 +0100},
 	Note = {Available at \url{http://maude.lcc.uma.es/CRChC}},
-	Title = {A Maude Coherence Checker Tool for Conditional Order-Sorted Rewrite Theories (Long Version)},
-	Year = {2010}}
+	Title = {A {M}aude Coherence Checker Tool for Conditional Order-Sorted Rewrite Theories (Long Version)},
+	Year = {2010}
+}
 
 @inproceedings{Duran-Meseguer:2010-wrla-chc,
-	Author = {Francisco Dur\'an and Jos\'e Meseguer},
-	Booktitle = {8th International Workshop on Rewriting Logic and its Applications},
-	Date-Added = {2010-02-03 09:57:08 +0100},
-	Date-Modified = {2011-02-26 18:49:48 +0100},
-	Editor = {Peter Csaba \"{O}lveczky},
-	Note = {To appear},
-	Publisher = {Springer},
-	Series = {Lecture Notes in Computer Science},
-	Title = {A {M}aude Coherence Checker Tool for Conditional Order-Sorted Rewrite Theories},
+   author = {Dur\'an, Francisco and Meseguer, Jos\'e},
+   title = {A {Church-Rosser} Checker Tool for Conditional Order-Sorted Equational {Maude} Specifications},
+   booktitle = {Rewriting Logic and Its Applications},
+   series = {Lecture Notes in Computer Science},
+   editor = {\"Olveczky, Peter},
+   publisher = {Springer},
+   isbn = {},
+   pages = {69-85},
+   volume = {6381},
 	Year = {2010}}
 
 @unpublished{Duran-Meseguer:2009-crc,
@@ -1017,6 +1008,18 @@ We show that in a free F-algebra endowed with a strict order we can associate wi
 	Note = {Available at \url{http://maude.lcc.uma.es/CRChC}},
 	Title = {{CRC} 3: A {C}hurch-{R}osser Checker Tool for Conditional Order-Sorted Equational {M}aude Specifications},
 	Year = {2009}}
+
+@inproceedings{Duran-Meseguer:2010-wrla-chc,
+   author = {Francisco Dur\'an, Francisco and Meseguer, Jos\'e},
+   title = {A {M}aude Coherence Checker Tool for Conditional Order-Sorted Rewrite Theories},
+   booktitle = {Rewriting Logic and Its Applications},
+   series = {Lecture Notes in Computer Science},
+   editor = {\"Olveczky, Peter},
+   publisher = {Springer},
+   pages = {86-103},
+   volume = {6381},
+   year = {2010}
+}
 
 @inproceedings{Duran-Meseguer:2010-wrla-crc,
 	Author = {Francisco Dur\'an and Jos\'e Meseguer},
@@ -5054,8 +5057,6 @@ data model specification while enforcing constraints during concurrent edits to 
 @inproceedings{Duran-Escobar-Lucas:04-rule,
 	Author = {F. Dur\'an and S. Escobar and S. Lucas},
 	Booktitle = {Proceedings of Fifth International Workshop on Rule-Based Programming (RULE'04)},
-	Date-Added = {2008-05-06 12:33:17 +0200},
-	Date-Modified = {2011-03-22 12:24:13 +0100},
 	Editor = {S. Abdennadher and C. Ringeissen},
 	Pages = {25--39},
 	Publisher = {Elsevier},
@@ -5077,8 +5078,6 @@ data model specification while enforcing constraints during concurrent edits to 
 @inproceedings{Duran-Escobar-Lucas:04-wrla,
 	Author = {F. Dur\'an and S. Escobar and S. Lucas},
 	Booktitle = {5th International Workshop on Rewriting Logic and its Applications (WRLA'04)},
-	Date-Added = {2008-05-06 12:33:17 +0200},
-	Date-Modified = {2011-03-22 12:24:28 +0100},
 	Editor = {N. Mart{\'\i}-Oliet},
 	Pages = {263--284},
 	Publisher = {Elsevier},
