--- a/docs/papers/festschrift-ct/duran.bib
+++ b/docs/papers/festschrift-ct/duran.bib
@@ -1,10 +1,3 @@
-%% This BibTeX bibliography file was created using BibDesk.
-%% http://bibdesk.sourceforge.net/
-
-
-%% Created for Paco Durán at 2011-02-26 18:56:07 +0100 
-
-
 %% Saved with string encoding Unicode (UTF-8) 
 
 
@@ -129,6 +122,15 @@
 @string{wrla98 = {Proceedings Second International Workshop on Rewriting Logic and its Applications, WRLA'98, Pont-\`a-Mousson, France, September 1--4, 1998}}
 
 
+@techreport{Rocha-Meseguer:2011-tr,
+	Author = {Camilo Rocha and Jos\'e Meseguer},
+	Date-Added = {2011-03-21 19:56:35 +0100},
+	Date-Modified = {2011-03-21 20:02:02 +0100},
+	Institution = {University of Illinois at Urbana-Champaign},
+	Title = {Proving Safety Properties of Rewrite Theories},
+	Url = {http://hdl.handle.net/2142/17407},
+	Year = {2010}}
+
 @article{Aspinall-Luth:2007,
 	Author = {David Aspinall and Christoph L\"uth},
 	Date-Added = {2011-02-26 12:46:13 +0100},
@@ -174,10 +176,8 @@
 
 @article{Duran-Meseguer:2011,
 	Author = {Francisco Dur\'{a}n and Jos\'{e} Meseguer},
-	Date-Added = {2011-02-26 11:07:52 +0100},
-	Date-Modified = {2011-02-26 11:17:52 +0100},
 	Journal = {Journal of Logic and Algebraic Programming Journal of Logic and Algebraic Programming},
-	Note = {Submitted for publication},
+	Note = {Accepted for publication},
 	Title = {On the {C}hurch-{R}osser and Coherence Properties of Conditional Order-Sorted Rewrite Theories},
 	Year = {2011}}
 
@@ -986,11 +986,11 @@ We show that in a free F-algebra endowed with a strict order we can associate wi
 	Date-Modified = {2010-02-03 10:26:53 +0100},
 	Note = {Available at \url{http://maude.lcc.uma.es/CRChC}},
 	Title = {A {M}aude Coherence Checker Tool for Conditional Order-Sorted Rewrite Theories (Long Version)},
-	Year = {2010}}
+	Year = {2010}
+}
 
 @inproceedings{Duran-Meseguer:2010-wrla-chc,
    author = {Dur\'an, Francisco and Meseguer, Jos\'e},
-   affiliation = {Universidad de M\'alaga, Spain},
    title = {A {Church-Rosser} Checker Tool for Conditional Order-Sorted Equational {Maude} Specifications},
    booktitle = {Rewriting Logic and Its Applications},
    series = {Lecture Notes in Computer Science},
@@ -1009,18 +1009,29 @@ We show that in a free F-algebra endowed with a strict order we can associate wi
 	Title = {{CRC} 3: A {C}hurch-{R}osser Checker Tool for Conditional Order-Sorted Equational {M}aude Specifications},
 	Year = {2009}}
 
-@inproceedings{Duran-Meseguer:2010-wrla-crc,
-   author = {Dur\'an, Francisco and Meseguer, Jos\'e},
-   affiliation = {Universidad de M\'alaga, Spain},
-   title = {A Maude Coherence Checker Tool for Conditional Order-Sorted Rewrite Theories},
+@inproceedings{Duran-Meseguer:2010-wrla-chc,
+   author = {Francisco Dur\'an, Francisco and Meseguer, Jos\'e},
+   title = {A {M}aude Coherence Checker Tool for Conditional Order-Sorted Rewrite Theories},
    booktitle = {Rewriting Logic and Its Applications},
    series = {Lecture Notes in Computer Science},
    editor = {\"Olveczky, Peter},
    publisher = {Springer},
-   isbn = {},
    pages = {86-103},
    volume = {6381},
-   year = {2010}}
+   year = {2010}
+}
+
+@inproceedings{Duran-Meseguer:2010-wrla-crc,
+	Author = {Francisco Dur\'an and Jos\'e Meseguer},
+	Booktitle = {8th International Workshop on Rewriting Logic and its Applications},
+	Date-Added = {2009-12-17 23:05:32 +0100},
+	Date-Modified = {2011-02-26 18:49:23 +0100},
+	Editor = {Peter Csaba \"{O}lveczky},
+	Note = {To appear},
+	Publisher = {Springer},
+	Series = {Lecture Notes in Computer Science},
+	Title = {A {C}hurch-{R}osser Checker Tool for Conditional Order-Sorted Equational {M}aude Specifications},
+	Year = {2010}}
 
 @inproceedings{Escobar-Meseguer-Sasse:2008-wrla,
 	Author = {Santiago Escobar and Jos\'e Meseguer and Ralf Sasse},
@@ -1824,16 +1835,16 @@ We show that in a free F-algebra endowed with a strict order we can associate wi
 	Volume = {238},
 	Year = {2008}}
 
-@article{Duran-Olveczky:2008-wrla,
-title = {A Guide to Extending {Full Maude} Illustrated with the 
-Implementation of {Real-Time Maude}},
-journal = {Electronic Notes in Theoretical Computer Science},
-volume = {238},
-number = {3},
-pages = {83-102},
-year = {2009},
-issn = {1571-0661},
-author = {Francisco Dur\'an and Peter Csaba \"Olveczky}}
+@inproceedings{Duran-Olveczky:2008-wrla,
+	Author = {Francisco Dur\'an and Peter Csaba \"Olveczky},
+	Booktitle = {Proceedings 7th International Workshop on Rewriting Logic and its Applications (WRLA'08)},
+	Date-Added = {2008-09-18 14:32:49 +0200},
+	Date-Modified = {2009-10-05 00:35:21 +0200},
+	Editor = {Grigore Ro{\c{s}}u},
+	Publisher = {Elsevier},
+	Series = {Electronic Notes in Theoretical Computer Science},
+	Title = {A Guide to Extending {Full Maude} Illustrated with the Implementation of {Real-Time Maude}},
+	Year = {2008}}
 
 @inproceedings{Duran-Lucas-Meseguer:2008-ijcar,
 	Author = {Francisco Dur\'{a}n and Salvador Lucas and Jos\'{e} Meseguer},
@@ -2277,11 +2288,11 @@ author = {Francisco Dur\'an and Peter Csaba \"Olveczky}}
 @unpublished{CDELMMT-manual,
 	Author = {Manuel Clavel and Francisco Dur\'an and Steven Eker and Patrick Lincoln and Narciso Mart\'{\i}-Oliet and Jos\'e Meseguer and Carolyn Talcott},
 	Date-Added = {2008-05-06 12:33:17 +0200},
-	Date-Modified = {2009-10-05 00:31:44 +0200},
-	Month = {November},
+	Date-Modified = {2011-03-22 13:11:16 +0100},
+	Month = {January},
 	Note = {Available in \url{http://maude.cs.uiuc.edu}},
-	Title = {{M}aude 2.4 Manual},
-	Year = {2008}}
+	Title = {{M}aude 2.6 Manual},
+	Year = {2011}}
 
 @inproceedings{Lucanu-Rosu:07-calco,
 	Author = {Dorel Lucanu and Grigore Ro{\c{s}}u},
@@ -5044,10 +5055,8 @@ data model specification while enforcing constraints during concurrent edits to 
 	Year = {2000}}
 
 @inproceedings{Duran-Escobar-Lucas:04-rule,
-	Author = {F. Dur{\'a}n and S. Escobar and S. Lucas},
+	Author = {F. Dur\'an and S. Escobar and S. Lucas},
 	Booktitle = {Proceedings of Fifth International Workshop on Rule-Based Programming (RULE'04)},
-	Date-Added = {2008-05-06 12:33:17 +0200},
-	Date-Modified = {2008-05-06 12:33:21 +0200},
 	Editor = {S. Abdennadher and C. Ringeissen},
 	Pages = {25--39},
 	Publisher = {Elsevier},
@@ -5067,10 +5076,8 @@ data model specification while enforcing constraints during concurrent edits to 
 	Year = {2004}}
 
 @inproceedings{Duran-Escobar-Lucas:04-wrla,
-	Author = {F. Dur{\'a}n and S. Escobar and S. Lucas},
+	Author = {F. Dur\'an and S. Escobar and S. Lucas},
 	Booktitle = {5th International Workshop on Rewriting Logic and its Applications (WRLA'04)},
-	Date-Added = {2008-05-06 12:33:17 +0200},
-	Date-Modified = {2008-05-06 12:33:21 +0200},
 	Editor = {N. Mart{\'\i}-Oliet},
 	Pages = {263--284},
 	Publisher = {Elsevier},
